--- a/backend/app/static/webui.html
+++ b/backend/app/static/webui.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Enviar Transação</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <script>
-    const API_URL = 'http://localhost:8000';
+    const API_URL = "http://localhost:8000";
 
     function sortedJSONString(obj) {
       const sorted = {};
-      Object.keys(obj).sort().forEach(key => {
-        if (key === 'amount') {
-          sorted[key] = parseFloat(obj[key]).toFixed(1);
-        } else {
-          sorted[key] = obj[key];
-        }
-      });
+      Object.keys(obj)
+        .sort()
+        .forEach((key) => {
+          if (key === "amount") {
+            sorted[key] = parseFloat(obj[key]).toFixed(1);
+          } else {
+            sorted[key] = obj[key];
+          }
+        });
       return JSON.stringify(sorted);
     }
 
     async function generateKeys() {
       const response = await axios.get(`${API_URL}/generate_keys`);
-      document.getElementById('publicKey').value = response.data.public_key;
-      document.getElementById('privateKey').value = response.data.private_key;
+      document.getElementById("publicKey").value = response.data.public_key;
+      document.getElementById("privateKey").value = response.data.private_key;
     }
 
     async function signTransaction() {
-      const sender = document.getElementById('sender').value;
-      const recipient = document.getElementById('recipient').value;
-      const amount = parseFloat(document.getElementById('amount').value);
-      const privateKey = document.getElementById('privateKey').value;
+      const sender = document.getElementById("sender").value;
+      const recipient = document.getElementById("recipient").value;
+      const amount = parseFloat(document.getElementById("amount").value);
+      const privateKey = document.getElementById("privateKey").value;
 
       const txDataObj = { sender, recipient, amount };
       const txData = sortedJSONString(txDataObj);
@@ -38,44 +41,54 @@
 
       const response = await axios.post(`${API_URL}/sign`, {
         tx_data: txData,
-        private_key: privateKey
+        private_key: privateKey,
       });
 
-      document.getElementById('signature').value = response.data.signature;
+      document.getElementById("signature").value = response.data.signature;
     }
 
     async function sendTransaction() {
       const tx = {
-        sender: document.getElementById('sender').value,
-        recipient: document.getElementById('recipient').value,
-        amount: parseFloat(document.getElementById('amount').value),
-        signature: document.getElementById('signature').value,
-        public_key: document.getElementById('publicKey').value
+        sender: document.getElementById("sender").value,
+        recipient: document.getElementById("recipient").value,
+        amount: parseFloat(document.getElementById("amount").value),
+        signature: document.getElementById("signature").value,
+        public_key: document.getElementById("publicKey").value,
       };
 
       try {
         const response = await axios.post(`${API_URL}/transaction`, tx);
-        document.getElementById('result').textContent = JSON.stringify(response.data, null, 2);
+        document.getElementById("result").textContent = JSON.stringify(
+          response.data,
+          null,
+          2
+        );
         loadBlockchain();
       } catch (error) {
-        document.getElementById('result').textContent = error.response?.data?.detail || 'Erro ao enviar transação.';
+        document.getElementById("result").textContent =
+          error.response?.data?.detail || "Erro ao enviar transação.";
       }
     }
 
     async function mineBlock() {
       const response = await axios.post(`${API_URL}/mine`);
-      document.getElementById('result').textContent = JSON.stringify(response.data, null, 2);
+      document.getElementById("result").textContent = JSON.stringify(
+        response.data,
+        null,
+        2
+      );
       loadBlockchain();
     }
 
     async function loadBlockchain() {
       const response = await axios.get(`${API_URL}/chain`);
       const blocks = response.data;
-      const container = document.getElementById('chain');
-      container.innerHTML = '';
-      blocks.forEach(block => {
-        const div = document.createElement('div');
-        div.className = 'border border-gray-400 bg-white shadow-md rounded-lg p-4 mb-4';
+      const container = document.getElementById("chain");
+      container.innerHTML = "";
+      blocks.forEach((block) => {
+        const div = document.createElement("div");
+        div.className =
+          "border border-gray-400 bg-white shadow-md rounded-lg p-4 mb-4";
         div.innerHTML = `
           <h3 class="font-bold">Bloco ${block.index}</h3>
           <p><strong>Hash:</strong> ${block.hash}</p>
@@ -83,7 +96,9 @@
           <p><strong>Nonce:</strong> ${block.nonce}</p>
           <p><strong>Timestamp:</strong> ${block.timestamp}</p>
           <p><strong>Transações:</strong></p>
-          <ul class="list-disc pl-6">${block.transactions.map(tx => `<li>${JSON.stringify(tx)}</li>`).join('')}</ul>
+          <ul class="list-disc pl-6">${block.transactions
+            .map((tx) => `<li>${JSON.stringify(tx)}</li>`)
+            .join("")}</ul>
         `;
         container.appendChild(div);
       });
@@ -91,22 +106,32 @@
 
     async function hackBlock() {
       const response = await axios.get(`${API_URL}/hack_block`);
-      document.getElementById('result').textContent = JSON.stringify(response.data, null, 2);
+      document.getElementById("result").textContent = JSON.stringify(
+        response.data,
+        null,
+        2
+      );
       loadBlockchain();
     }
 
     async function checkBlockchain() {
       const response = await axios.get(`${API_URL}/check_chain`);
-      document.getElementById('result').textContent = JSON.stringify(response.data, null, 2);
+      document.getElementById("result").textContent = JSON.stringify(
+        response.data,
+        null,
+        2
+      );
     }
 
     async function exportBlockchain() {
       const response = await axios.get(`${API_URL}/export`);
-      const blob = new Blob([JSON.stringify(response.data, null, 2)], { type: 'application/json' });
+      const blob = new Blob([JSON.stringify(response.data, null, 2)], {
+        type: "application/json",
+      });
       const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
+      const a = document.createElement("a");
       a.href = url;
-      a.download = 'blockchain.json';
+      a.download = "blockchain.json";
       a.click();
     }
 
@@ -114,62 +139,207 @@
       const file = event.target.files[0];
       if (!file) return;
       const content = await file.text();
-      const response = await axios.post(`${API_URL}/import`, JSON.parse(content));
-      document.getElementById('result').textContent = JSON.stringify(response.data, null, 2);
+      const response = await axios.post(
+        `${API_URL}/import`,
+        JSON.parse(content)
+      );
+      document.getElementById("result").textContent = JSON.stringify(
+        response.data,
+        null,
+        2
+      );
       loadBlockchain();
     }
 
     async function registerPeer() {
-      const peerUrl = prompt("Digite o endereço do peer (ex: http://localhost:8001)");
+      const peerUrl = prompt(
+        "Digite o endereço do peer (ex: http://localhost:8001)"
+      );
       if (!peerUrl) return;
-      const response = await axios.post(`${API_URL}/peers/register?peer_url=${encodeURIComponent(peerUrl)}`);
-      document.getElementById('result').textContent = JSON.stringify(response.data, null, 2);
+      const response = await axios.post(
+        `${API_URL}/peers/register?peer_url=${encodeURIComponent(peerUrl)}`
+      );
+      document.getElementById("result").textContent = JSON.stringify(
+        response.data,
+        null,
+        2
+      );
     }
 
     async function syncPeers() {
       const response = await axios.get(`${API_URL}/peers/sync`);
-      document.getElementById('result').textContent = JSON.stringify(response.data, null, 2);
+      document.getElementById("result").textContent = JSON.stringify(
+        response.data,
+        null,
+        2
+      );
       loadBlockchain();
+    }
+
+    async function registerUser() {
+      const name = document.getElementById("userName").value;
+      const email = document.getElementById("userEmail").value;
+      if (!name) return alert("O campo nome é obrigatório!");
+
+      try {
+        const response = await axios.post(`${API_URL}/users/register`, {
+          name,
+          email,
+        });
+        document.getElementById("result").textContent =
+          "Usuário registrado com sucesso:\n" +
+          JSON.stringify(response.data, null, 2);
+      } catch (error) {
+        document.getElementById("result").textContent =
+          error.response?.data?.detail || "Erro ao registrar usuário.";
+      }
+    }
+
+    async function uploadArtwork() {
+      const file = document.getElementById("fileInput").files[0];
+      const title = document.getElementById("title").value;
+      const description = document.getElementById("description").value;
+      const authorId = document.getElementById("authorId").value;
+
+      if (!file || !title || !description || !authorId) {
+        alert("Todos os campos são obrigatórios.");
+        return;
+      }
+
+      const formData = new FormData();
+      formData.append("file", file);
+      formData.append("title", title);
+      formData.append("description", description);
+      formData.append("author_id", authorId);
+
+      try {
+        const response = await axios.post(`${API_URL}/artworks`, formData, {
+          headers: { "Content-Type": "multipart/form-data" },
+        });
+        document.getElementById("uploadResult").textContent =
+          "Obra registrada:\n" + JSON.stringify(response.data, null, 2);
+      } catch (error) {
+        document.getElementById("uploadResult").textContent =
+          error.response?.data?.detail || "Erro ao enviar obra.";
+      }
     }
   </script>
 </head>
+
 <body class="bg-gray-100 p-6" onload="loadBlockchain()">
   <div class="max-w-5xl mx-auto bg-white rounded-xl shadow-md p-6">
-    <h1 class="text-2xl font-bold mb-4">Interface Blockchain com Recursos Avançados</h1>
+    <h1 class="text-2xl font-bold mb-4">
+      Interface Blockchain com Recursos Avançados
+    </h1>
 
     <div class="grid grid-cols-2 gap-4">
       <div>
-        <button class="bg-blue-600 text-white px-4 py-2 rounded" onclick="generateKeys()">Gerar Par de Chaves</button>
-        <label class="block mt-2">Chave Privada:<textarea id="privateKey" class="w-full mt-1 p-2 border rounded" rows="3"></textarea></label>
-        <label class="block mt-2">Chave Pública:<textarea id="publicKey" class="w-full mt-1 p-2 border rounded" rows="3"></textarea></label>
+        <button class="bg-blue-600 text-white px-4 py-2 rounded" onclick="generateKeys()">
+          Gerar Par de Chaves
+        </button>
+        <label class="block mt-2">Chave Privada:<textarea id="privateKey" class="w-full mt-1 p-2 border rounded"
+            rows="3"></textarea>
+        </label>
+        <label class="block mt-2">Chave Pública:<textarea id="publicKey" class="w-full mt-1 p-2 border rounded"
+            rows="3"></textarea>
+        </label>
       </div>
       <div>
-        <label class="block">Remetente: <input type="text" id="sender" class="w-full mt-1 p-2 border rounded" /></label>
-        <label class="block mt-2">Destinatário: <input type="text" id="recipient" class="w-full mt-1 p-2 border rounded" /></label>
-        <label class="block mt-2">Valor: <input type="number" id="amount" class="w-full mt-1 p-2 border rounded" /></label>
-        <button class="bg-yellow-500 text-white px-4 py-2 rounded mt-2" onclick="signTransaction()">Assinar Transação</button>
-        <label class="block mt-2">Assinatura:<textarea id="signature" class="w-full mt-1 p-2 border rounded" rows="2"></textarea></label>
+        <label class="block">Remetente:
+          <input type="text" id="sender" class="w-full mt-1 p-2 border rounded" /></label>
+        <label class="block mt-2">Destinatário:
+          <input type="text" id="recipient" class="w-full mt-1 p-2 border rounded" /></label>
+        <label class="block mt-2">Valor:
+          <input type="number" id="amount" class="w-full mt-1 p-2 border rounded" /></label>
+        <button class="bg-yellow-500 text-white px-4 py-2 rounded mt-2" onclick="signTransaction()">
+          Assinar Transação
+        </button>
+        <label class="block mt-2">Assinatura:<textarea id="signature" class="w-full mt-1 p-2 border rounded"
+            rows="2"></textarea>
+        </label>
       </div>
     </div>
 
-    <div class="mt-4">
-  <details class="mb-2" open>
-    <summary class="cursor-pointer bg-blue-800 text-white px-4 py-2 rounded w-fit">Menu de Ações</summary>
-    <div class="mt-2 flex flex-wrap gap-2 justify-start">
-      <button class="bg-green-600 text-white px-4 py-2 rounded" onclick="sendTransaction()">Enviar Transação</button>
-      <button class="bg-purple-600 text-white px-4 py-2 rounded" onclick="mineBlock()">Minerar Bloco</button>
-      <button class="bg-red-600 text-white px-4 py-2 rounded" onclick="hackBlock()">Hackear Bloco</button>
-      <button class="bg-indigo-600 text-white px-4 py-2 rounded" onclick="checkBlockchain()">Verificar Integridade</button>
-      <button class="bg-gray-700 text-white px-4 py-2 rounded" onclick="exportBlockchain()">Exportar Blockchain</button>
-      <label class="bg-gray-500 text-white px-4 py-2 rounded cursor-pointer">
-        Importar Blockchain
-        <input type="file" class="hidden" onchange="importBlockchain(event)">
+    <hr class="my-6" />
+
+    <h2 class="text-xl font-semibold mt-6">👤 Registro de Usuário</h2>
+    <form id="userForm" class="grid grid-cols-2 gap-4 mt-2">
+      <label>Nome:
+        <input type="text" id="userName" class="w-full mt-1 p-2 border rounded" placeholder="Ex: Ana Artista" />
       </label>
-      <button class="bg-teal-700 text-white px-4 py-2 rounded border-2 border-white shadow-md min-w-[14rem] text-left" style="background-color: #0d9488; color: white;" onclick="registerPeer()">🔗 Registrar Peer</button>
-      <button class="bg-cyan-600 text-white px-4 py-2 rounded border-2 border-white shadow-md min-w-[14rem] text-left" style="background-color: #0891b2; color: white;" onclick="syncPeers()">🔄 Sincronizar com Peers</button>
+      <label>Email (opcional):
+        <input type="email" id="userEmail" class="w-full mt-1 p-2 border rounded" />
+      </label>
+      <div class="col-span-2">
+        <button type="button" onclick="registerUser()" class="bg-blue-600 text-white px-4 py-2 rounded mt-2">
+          Registrar Usuário
+        </button>
+      </div>
+    </form>
+
+    <hr class="my-6" />
+
+    <h2 class="text-xl font-semibold mt-6">🖼️ Upload de Obra Digital</h2>
+    <form id="artworkForm" class="grid grid-cols-2 gap-4 mt-2" enctype="multipart/form-data">
+      <label>Arquivo:
+        <input type="file" id="fileInput" accept=".png,.jpg,.jpeg,.pdf" class="w-full mt-1 p-2 border rounded" />
+      </label>
+      <label>Author ID:
+        <input type="number" id="authorId" class="w-full mt-1 p-2 border rounded" placeholder="Ex: 1" />
+      </label>
+      <label class="col-span-2">Título:
+        <input type="text" id="title" class="w-full mt-1 p-2 border rounded" placeholder="Ex: Meu Trabalho Incrível" />
+      </label>
+      <label class="col-span-2">Descrição:
+        <textarea id="description" class="w-full mt-1 p-2 border rounded" rows="2"></textarea>
+      </label>
+      <div class="col-span-2">
+        <button type="button" onclick="uploadArtwork()" class="bg-green-600 text-white px-4 py-2 rounded mt-2">
+          Registrar Obra
+        </button>
+      </div>
+    </form>
+
+    <pre id="uploadResult" class="bg-gray-200 p-3 rounded overflow-auto mt-4"></pre>
+
+    <div class="mt-4">
+      <details class="mb-2" open>
+        <summary class="cursor-pointer bg-blue-800 text-white px-4 py-2 rounded w-fit">
+          Menu de Ações
+        </summary>
+        <div class="mt-2 flex flex-wrap gap-2 justify-start">
+          <button class="bg-green-600 text-white px-4 py-2 rounded" onclick="sendTransaction()">
+            Enviar Transação
+          </button>
+          <button class="bg-purple-600 text-white px-4 py-2 rounded" onclick="mineBlock()">
+            Minerar Bloco
+          </button>
+          <button class="bg-red-600 text-white px-4 py-2 rounded" onclick="hackBlock()">
+            Hackear Bloco
+          </button>
+          <button class="bg-indigo-600 text-white px-4 py-2 rounded" onclick="checkBlockchain()">
+            Verificar Integridade
+          </button>
+          <button class="bg-gray-700 text-white px-4 py-2 rounded" onclick="exportBlockchain()">
+            Exportar Blockchain
+          </button>
+          <label class="bg-gray-500 text-white px-4 py-2 rounded cursor-pointer">
+            Importar Blockchain
+            <input type="file" class="hidden" onchange="importBlockchain(event)" />
+          </label>
+          <button
+            class="bg-teal-700 text-white px-4 py-2 rounded border-2 border-white shadow-md min-w-[14rem] text-left"
+            style="background-color: #0d9488; color: white" onclick="registerPeer()">
+            🔗 Registrar Peer
+          </button>
+          <button
+            class="bg-cyan-600 text-white px-4 py-2 rounded border-2 border-white shadow-md min-w-[14rem] text-left"
+            style="background-color: #0891b2; color: white" onclick="syncPeers()">
+            🔄 Sincronizar com Peers
+          </button>
+        </div>
+      </details>
     </div>
-  </details>
-</div>
 
     <h2 class="text-xl font-semibold mt-6">Resposta da API:</h2>
     <pre id="result" class="bg-gray-200 p-3 rounded overflow-auto"></pre>
@@ -178,5 +348,5 @@
     <div id="chain" class="bg-gray-100 p-3 rounded overflow-auto h-[32rem]"></div>
   </div>
 </body>
-</html>
 
+</html>
